--- a/templates/product/CreateProduct.html
+++ b/templates/product/CreateProduct.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>My Project</title>
-    </head>
-    
-    <body>
-    {% block content %}
-    
-    {% endblock content %}
-    </body>
-</html>
+{% load crispy_forms_tags %}
+
+{% block content %}
+    <form id="contactForm" method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" name="contact-submit" class="btn btn-success btn-lg"/>
+    </form>
+{% endblock content %}
