show image on site

--- a/templates/product/Products.html
+++ b/templates/product/Products.html
@@ -4,43 +4,11 @@
     {% if products != None %}
         {% for product in products %}
             <div>
-            {{ product.name }}
+                {{ product.name }}
+                <img src="{{ product.image.url }}" alt="">
             </div>
         {% endfor %}
     {% else %}
         <h3> At current moment no available products</h3>
     {% endif %}
 {% endblock content %}
-
-{% block javascript %}
-  <script>
-      $(document).ready(function () {
-          // отслеживаем событие отправки формы
-          $('#id_username').keyup(function () {
-              // создаем AJAX-вызов
-              $.ajax({
-                  data: $(this).serialize(), // получаяем данные формы
-                  url: "{% url 'validate_username' %}",
-                  // если успешно, то
-                  success: function (response) {
-                      if (response.is_taken == true) {
-                          $('#id_username').removeClass('is-valid').addClass('is-invalid');
-                          $('#id_username').after('<div class="invalid-feedback d-block" id="usernameError">This username is not available!</div>')
-                      }
-                      else {
-                          $('#id_username').removeClass('is-invalid').addClass('is-valid');
-                          $('#usernameError').remove();
-
-                      }
-                  },
-                  // если ошибка, то
-                  error: function (response) {
-                      // предупредим об ошибке
-                      console.log(response.responseJSON.errors)
-                  }
-              });
-              return false;
-          });
-      })
-  </script>
-{% endblock javascript %}
