--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -7,37 +7,41 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Add new product</a>
-                </li>
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Add new product</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'discounts' %}">Discounts</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new_discount' %}">Add new discount</a>
-                </li>
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'new_discount' %}">Add new discount</a>
+                    </li>
+                {% endif %}
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search product" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse position-absolute end-0 me-4" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Sign Out</a>
-                </li>
                     <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Profile</a>
-                </li>
+                        <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Sign Out</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{% url 'me' %}">Profile</a>
+                    </li>
                 {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-                </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
+                        <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Register</a>
+                    </li>
                 {% endif %}
 
             </ul>
