--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,12 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-md">
-        <a class="navbar-brand" href="{% url 'products' %}">Products</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'products' %}">Products</a>
+                </li>
                 {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{% url 'new_product' %}">Add new product</a>
@@ -21,12 +19,8 @@
                     </li>
                 {% endif %}
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search product" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
-        <div class="collapse navbar-collapse position-absolute end-0 me-4" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse position-absolute end-0 me-4">
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
@@ -48,3 +42,9 @@
         </div>
     </div>
 </nav>
+
+
+<script>
+    let currentLocation = document.location.pathname;
+    $(`a[href="${currentLocation}"]`).addClass("active")
+</script>
