--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,3 +39,21 @@ body{
     font-size: 25px;
     line-height: 42px;
 }
+
+.black-white-icons{
+    background: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    color: #000;
+    display: inline-block;
+    text-align: center;
+    border: 3px solid #fff;
+}
+
+.black-white-icons i {
+    color: #000;
+    font-size: 25px;
+    line-height: 42px;
+}
