--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -24,6 +24,9 @@
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Sign Out</a>
                     </li>
                     <li class="nav-item">
