implement user profile

--- a/templates/product/Products.html
+++ b/templates/product/Products.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Available products{% endblock %}
+{% block title %}Available products{% endblock title %}
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}">
 {% endblock stylesheets %}
