--- a/templates/registration/Signup.html
+++ b/templates/registration/Signup.html
@@ -5,7 +5,7 @@
 {% block title %}Sign Up{% endblock %}
 {% block content %}
   <h2>Sign up</h2>
-  <form method="post">
+  <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit">Sign Up</button>
