--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,7 +1,7 @@
-<section class="card">
+<section class="card box">
     <div class="card-body">
         <div class="pull-right">
-            <ul class="pagination pagination-md">
+            <ul class="pagination pagination-md mb-0">
                 {% if pagination.start_page == pagination.current_page %}
                     <li class="page-item disabled">
                         <a class="page-link" aria-disabled="true" href="{{ url }}?page={{ pagination.start_page }}">Previous</a>
