--- a/templates/product/CreateProduct.html
+++ b/templates/product/CreateProduct.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-
 {% load crispy_forms_tags %}
 
+{% block title %}New Product{% endblock title %}
 {% block content %}
     <form id="product" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
