--- a/templates/product/Product.html
+++ b/templates/product/Product.html
@@ -1,27 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
+{% block title %}{{ product.name }}{% endblock title %}
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/product.css' %}">
 {% endblock stylesheets %}
 
 {% block content %}
-    <div class="row align-items-center rounded mt-5 mx-2">
-        <div class="col-xl-8 col-lg-12">
-            <img class="img-thumbnail rounded mx-auto d-block" src="{{ product.image.url }}" alt=""/>
+    <div class="d-flex flex-row justify-content-center align-items-center border-0 mt-5 mx-2 card box py-5">
+        <div class="col-xl-6 col-lg-12">
+            <img class="img-fluid rounded mx-auto d-block" src="{{ product.image.url }}" alt=""/>
         </div>
 
-        <div class="col-xl-4 col-lg-12">
+        <div class="col-xl-6 col-lg-12">
             <div class="product mx-auto">
                 <span class="category"></span>
                 <p class="fw-bold name">{{ product.name }}</p>
                 <p class="fw-normal description">{{ product.description }}</p>
 
                 <div class="product-price mx-auto cart-btn">
-                    <span class="price fw-normal">{{ product.price }}$</span>
-                    <button class="add-to-cart" value="{{ product.id }}">
-                        <i class="fa fa-shopping-cart"></i>
+                    <button class="btn btn-success btn-lg mt-3 add-to-cart" value="{{ product.id }}">
+                        {{ product.price }}$ <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
