--- a/templates/registration/Signup.html
+++ b/templates/registration/Signup.html
@@ -1,13 +1,31 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load crispy_forms_tags %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Login{% endblock title %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+{% endblock stylesheets %}
+
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit">Sign Up</button>
-  </form>
-{% endblock %}
+    <div class="d-flex flex-row justify-content-center align-items-center border-0 card">
+        <form method="POST" class="box col-6">
+            {% csrf_token %}
+            <h1 class="text-uppercase">Register</h1>
+            <p class="text-muted"> Please fill data below</p>
+            <label for="id_username"> Username </label>
+            {{ form.username }}
+            <label for="id_password1"> Password </label>
+            {{ form.password1 }}
+            <label for="id_password2"> Repeat Password </label>
+            {{ form.password2 }}
+            <label for="id_email"> Email </label>
+            {{ form.email }}
+            <label for="id_first_name"> First name </label>
+            {{ form.first_name }}
+            <label for="id_last_name"> Last name </label>
+            {{ form.last_name }}
+            <button class="btn btn-success btn-lg mt-3" type="submit">Register</button>
+        </form>
+    </div>
+{% endblock content %}
