--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 </main>
 
 {% block javascripts %}
-
+    <script src="{% static 'js/custom.js' %}"></script>
 {% endblock javascripts %}
 
 </body>
