--- a/templates/discount/CreateDiscount.html
+++ b/templates/discount/CreateDiscount.html
@@ -1,11 +1,27 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% load crispy_forms_tags %}
+{% block title %}New Discount{% endblock title %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+{% endblock stylesheets %}
 
 {% block content %}
-    <form id="product" enctype="multipart/form-data" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" name="create" class="btn btn-success btn-lg"/>
-    </form>
+    <div class="d-flex flex-row justify-content-center align-items-center border-0 card">
+        <form method="POST" enctype="multipart/form-data" class="box col-6 mt-3">
+            {% csrf_token %}
+            {{ form.errors }}
+            <p class="text-muted"> Please fill data below</p>
+            <label for="id_name"> Value: </label>
+            {{ form.value }}
+
+            <label for="search" class="d-none"></label>
+            <input id="search" type="text" name="search" placeholder="Enter product name" class="form-control mt-3"/>
+
+            <label for="id_description"> Product: </label>
+            {{ form.product }}
+            <button class="btn btn-success btn-lg mt-3" type="submit">Create</button>
+        </form>
+    </div>
 {% endblock content %}
