--- a/templates/discount/Discounts.html
+++ b/templates/discount/Discounts.html
@@ -1,46 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
+{% block title %}Discounts{% endblock title %}
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/product.css' %}">
+{% endblock stylesheets %}
 
 {% block content %}
     {% if discounts != None %}
         {% for discount in discounts %}
-            <div>
-            {{ discount.value }}
+            <div class="d-flex flex-row justify-content-center align-items-center border-0 mt-2 mx-2 card box py-5">
+                <div class="col-xl-6 col-lg-12">
+                    <img class="img-fluid rounded mx-auto d-block" src="{{ discount.product.image.url }}" alt=""/>
+                </div>
+
+                <div class="col-xl-6 col-lg-12">
+                    <div class="product mx-auto">
+                        <span class="category"></span>
+                        <p class="fw-bold name">
+                            <a class="text-decoration-none" href="{% url 'product' discount.product.id %}">
+                                {{ discount.product.name }}
+                            </a>
+                        </p>
+                        <p class="fw-normal description text-white">{{ discount.value }}%</p>
+                    </div>
+                </div>
             </div>
         {% endfor %}
     {% else %}
         <h3> At current moment no available products</h3>
     {% endif %}
 {% endblock content %}
-
-{% block javascript %}
-  <script>
-      $(document).ready(function () {
-          // отслеживаем событие отправки формы
-          $('#id_username').keyup(function () {
-              // создаем AJAX-вызов
-              $.ajax({
-                  data: $(this).serialize(), // получаяем данные формы
-                  url: "{% url 'validate_username' %}",
-                  // если успешно, то
-                  success: function (response) {
-                      if (response.is_taken == true) {
-                          $('#id_username').removeClass('is-valid').addClass('is-invalid');
-                          $('#id_username').after('<div class="invalid-feedback d-block" id="usernameError">This username is not available!</div>')
-                      }
-                      else {
-                          $('#id_username').removeClass('is-invalid').addClass('is-valid');
-                          $('#usernameError').remove();
-
-                      }
-                  },
-                  // если ошибка, то
-                  error: function (response) {
-                      // предупредим об ошибке
-                      console.log(response.responseJSON.errors)
-                  }
-              });
-              return false;
-          });
-      })
-  </script>
-{% endblock javascript %}
