--- a/templates/product/Product.html
+++ b/templates/product/Product.html
@@ -20,7 +20,7 @@
 
                 <div class="product-price mx-auto cart-btn">
                     <button class="btn btn-success btn-lg mt-3 add-to-cart" value="{{ product.id }}">
-                        {{ product.price }}$ <i class="fa fa-shopping-cart"></i>
+                        {{ product.calculated_price }}$ <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
