--- a/templates/product/Products.html
+++ b/templates/product/Products.html
@@ -109,7 +109,7 @@
                                         {{ product.name }}
                                     </a>
                                 </h4>
-                                <p class="price">{{ product.price }}$</p>
+                                <p class="price">{{ product.calculated_price }}$</p>
                             </div>
                         </section>
                     </div>
