--- a/templates/discount/DiscountItem.html
+++ b/templates/discount/DiscountItem.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/switcher.css' %}">
 
 <div class="border-0 mt-3 mx-2 card box py-3">
+{% if request.user.is_superuser %}
     <div class="d-flex flex-row justify-content-end align-items-end mt-0 me-4">
         <label class="switch">
             <input type="checkbox" class="enabled-discount" value="{{ discount.id }}"
@@ -10,6 +11,7 @@
             <span class="slider round"></span>
         </label>
     </div>
+{% endif %}
 
     <div class="d-flex flex-row justify-content-center align-items-center py-4">
         <div class="col-xl-6 col-lg-12">
